--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,4 +1,4 @@
 // Override the custom skin variables.
 
-$link-base-color:       #bf7a8f; // Farrow and Ball Rangwali.
-$link-visited-color:    $link-base-color
+// $link-base-color:       #bf7a8f; // Farrow and Ball Rangwali.
+// $link-visited-color:    $link-base-color
