--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,37 @@
+@font-face {
+  font-family: 'IA Writer Quattro';
+  src: url('/fonts/iAWriterQuattroS-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'IA Writer Quattro';
+  src: url('/fonts/iAWriterQuattroS-Italic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'IA Writer Quattro';
+  src: url('/fonts/iAWriterQuattroS-Bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'IA Writer Quattro';
+  src: url('/fonts/iAWriterQuattroS-BoldItalic.woff2') format('woff2');
+  font-weight: bold;
+  font-style: italic;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
+  font-family: 'IA Writer Quattro', sans-serif;
   font-size: 1.6rem;
   color: #000;
 }
