--- a/css/default.css
+++ b/css/default.css
@@ -1,27 +1,27 @@
 @font-face {
-  font-family: 'IA Writer Quattro';
-  src: url('/fonts/iAWriterQuattroS-Regular.woff2') format('woff2');
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'IA Writer Quattro';
-  src: url('/fonts/iAWriterQuattroS-Italic.woff2') format('woff2');
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-RegularItalic.woff2') format('woff2');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'IA Writer Quattro';
-  src: url('/fonts/iAWriterQuattroS-Bold.woff2') format('woff2');
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'IA Writer Quattro';
-  src: url('/fonts/iAWriterQuattroS-BoldItalic.woff2') format('woff2');
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-BoldItalic.woff2') format('woff2');
   font-weight: bold;
   font-style: italic;
 }
@@ -31,7 +31,7 @@ html {
 }
 
 body {
-  font-family: 'IA Writer Quattro', sans-serif;
+  font-family: 'JetBrains Mono', monospace;
   font-size: 1.6rem;
   color: #000;
 }
