--- a/css/default.css
+++ b/css/default.css
@@ -27,17 +27,17 @@
 }
 
 html {
-  font-size: 62.5%;
+  /* font-size: 62.5%;*/
 }
 
 body {
   font-family: 'JetBrains Mono', monospace;
-  font-size: 1.6rem;
+  font-size: 1.25rem;
   color: #000;
 }
 
 header {
-  border-bottom: 0.2rem solid #000;
+  border-bottom: 0.25rem solid #000;
 }
 
 nav {
@@ -45,7 +45,7 @@ nav {
 }
 
 nav a {
-  font-size: 1.8rem;
+  font-size: 1.25rem;
   font-weight: bold;
   color: black;
   text-decoration: none;
@@ -54,9 +54,9 @@ nav a {
 
 footer {
   margin-top: 3rem;
-  padding: 1.2rem 0;
-  border-top: 0.2rem solid #000;
-  font-size: 1.2rem;
+  padding: 1.25rem 0;
+  border-top: 0.25rem solid #000;
+  font-size: 1rem;
   color: #555;
 }
 
@@ -65,7 +65,7 @@ img {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 2.5rem;
 }
 
 h2 {
@@ -73,7 +73,7 @@ h2 {
 }
 
 article .header {
-  font-size: 1.4rem;
+  font-size: 1rem;
   font-style: italic;
   color: #555;
 }
@@ -84,6 +84,14 @@ article .header {
   text-decoration: none;
 }
 
+table {
+  border: .125rem solid silver;
+}
+
+th, td {
+  padding: 0.25rem 1rem;
+}
+
 @media (max-width: 319px) {
   body {
     width: 90%;
@@ -91,10 +99,10 @@ article .header {
     padding: 0 5%;
   }
   header {
-    margin: 4.2rem 0;
+    margin: 3rem 0;
   }
   nav {
-    margin: 0 auto 3rem;
+    margin: 0 auto 2rem;
     text-align: center;
   }
   footer {
@@ -102,14 +110,14 @@ article .header {
   }
   .logo {
     text-align: center;
-    margin: 1rem auto 3rem;
+    margin: 1rem auto 2rem;
   }
   .logo a {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
   nav a {
     display: block;
-    line-height: 1.6;
+    line-height: 1.25;
   }
 }
 
@@ -120,10 +128,10 @@ article .header {
     padding: 0 5%;
   }
   header {
-    margin: 4.2rem 0;
+    margin: 3rem 0;
   }
   nav {
-    margin: 0 auto 3rem;
+    margin: 0 auto 2rem;
     text-align: center;
   }
   footer {
@@ -131,33 +139,33 @@ article .header {
   }
   .logo {
     text-align: center;
-    margin: 1rem auto 3rem;
+    margin: 1rem auto 2rem;
   }
   .logo a {
-    font-size: 2.4rem;
+    font-size: 2.5rem;
   }
   nav a {
     display: inline;
-    margin: 0 0.6rem;
+    margin: 0 0.75rem;
   }
 }
 
 @media (min-width: 640px) {
   body {
-    width: 60rem;
+    width: 50rem;
     margin: 0 auto;
     padding: 0;
   }
   header {
-    margin: 0 0 3rem;
-    padding: 1.2rem 0;
+    margin: 0 0 2rem;
+    padding: 1rem 0;
   }
   nav {
     margin: 0;
     text-align: right;
   }
   nav a {
-    margin: 0 0 0 1.2rem;
+    margin: 0 0 0 1.25rem;
     display: inline;
   }
   footer {
@@ -169,6 +177,6 @@ article .header {
   }
   .logo a {
     float: left;
-    font-size: 1.8rem;
+    font-size: 1.25rem;
   }
 }
