Updated styles, ready to launch!

--- a/css/default.css
+++ b/css/default.css
@@ -33,11 +33,12 @@ html {
 body {
   font-family: 'JetBrains Mono', monospace;
   font-size: 1.25rem;
-  color: #000;
+  line-height: 1.5;
+  color: #222;
 }
 
 header {
-  border-bottom: 0.25rem solid #000;
+  border-bottom: 0.25rem solid #222;
 }
 
 nav {
@@ -55,7 +56,7 @@ nav a {
 footer {
   margin-top: 3rem;
   padding: 1.25rem 0;
-  border-top: 0.25rem solid #000;
+  border-top: 0.25rem solid #222;
   font-size: 1rem;
   color: #555;
 }
@@ -72,6 +73,37 @@ h2 {
   font-size: 2rem;
 }
 
+a {
+  outline-color: transparent;
+}
+
+a:link {
+  color: #d44;
+}
+
+a:visited {
+  color: #dd4a4a;
+}
+
+a:focus {
+  text-decoration: none;
+  background: #eee;
+}
+
+a:hover {
+  text-decoration: none;
+  background: #eee;
+}
+
+a:active {
+  background: #efa9a9;
+  color: #eee;
+}
+
+li + li {
+  margin-top: 0.5rem;
+}
+
 article .header {
   font-size: 1rem;
   font-style: italic;
@@ -80,8 +112,12 @@ article .header {
 
 .logo a {
   font-weight: bold;
-  color: #000;
+  color: #222;
   text-decoration: none;
+}
+
+nav a, nav a:visited {
+  color: #222;
 }
 
 table {
