Make nav links always black

--- a/css/default.css
+++ b/css/default.css
@@ -116,7 +116,11 @@ article .header {
   text-decoration: none;
 }
 
-nav a, nav a:visited {
+nav a {
+  color: #222;
+}
+
+nav a:visited {
   color: #222;
 }
 
